<resources>
    <string name="app_name">NewsApp</string>
    <string name="search_hint">content search term</string>
    <string name="search_button">Search</string>
    <string name="search_description">Search through over 1.9 million news articles on the Guardian open platform</string>
    <string name="empty_search_results">Sorry, no article content matches your search term</string>
    <string name="no_connectivity_warning">We are unable to connect to the network.  Please check your network status</string>
</resources>
